--- a/index.html
+++ b/index.html
@@ -186,7 +186,13 @@
             </div>
             <div class="tile is-parent">
                 <div class="tile is-child box blur">
-
+                    <ins class="adsbygoogle" style="display:block" align="center" data-ad-client="ca-pub-4670059148424169" data-ad-slot="4342121726" data-ad-format="horizontal" data-full-width-responsive="false"></ins>
+                    <div class="content" id="adblocker_detected">
+                        <p class="title is-size-5 mb-0">
+                            An ad should be here but
+                            <span class="has-text-weight-bold">
+                                you're using an adblocker 😞
+                            </span>
                         </p>
                         <p class="content">
                             We spend <span class="has-text-danger-dark">our own money</span> to maintain the servers. A <b>single ad</b> here helps in covering these costs.
